syntax = "proto3";

option java_multiple_files = true;
option java_package = "cs236351.ledger";

package cs236351.ledger;

enum ResCode {
  SUCCESS = 0;
  FAILURE = 1;
}

message Res{
  ResCode res = 1;
}

message uint128 {
  uint64 low = 1;
  uint64 high = 2;
}

message Coins {
  uint64 coins = 1;
}

message rpcTransfer {
  uint128 address = 1;
  Coins coins = 2;
}

message TransferAndTransactionID{
  uint128 transaction_id = 1;
  rpcTransfer transfer = 2;
}

message Max{
  int32 max = 1;
}

message AddressAndMax{
  uint128 address = 1;
  int32 max = 2;
}

message AddressesAndAmount{
  uint128 address_from = 1;
  uint128 address_to = 2;
  uint64 amount = 3;
}

message rpcUTxO {
  uint128 transaction_id = 1;
  uint128 address = 2;
}

message rpcTransaction {
  uint128 id = 1;
  repeated rpcUTxO inputs = 2;
  repeated rpcTransfer outputs = 3;
}